[metadata]
name = xnutrace
author = Jevin Sweval
author_email = jevinsweval@gmail.com
description = "Tracing of iOS/macOS binaries using HW single step and Frida DBI."
version = attr: xnutrace.__version__
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jevinskie/xnu-trace

[options]
python_requires = ~=3.10
packages = find:
zip_safe = True
install_requires =
  attrs
  colorcet
  datashader
  numba
  numpy
  xarray
  zstandard

[options.entry_points]
console_scripts =
  xnu-trace-find-loops-py = xnutrace.tools.find_loops:main
  xnu-trace-render-trace-py = xnutrace.tools.render_trace:main

[build-system]
requires = ["setuptools"]
